sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:11: error: '<-' expected but ')' found.
			for(j<=0 to i){
                                     ^AlgBubbleSort2:19: error: illegal start of simple expression
		}
                ^